--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.0.4",
     "axios": "^1.7.2",
     "firebase": "^10.12.2",
     "prop-types": "^15.8.1",
