--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.0.4",
+    "@stripe/react-stripe-js": "^2.7.1",
+    "@stripe/stripe-js": "^3.5.0",
     "@tanstack/react-query": "^5.40.0",
     "axios": "^1.7.2",
     "firebase": "^10.12.2",
     "prop-types": "^15.8.1",
+    "query-string": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
@@ -22,6 +25,7 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
     "react-tabs": "^6.0.2",
+    "recharts": "^2.12.7",
     "sweetalert": "^2.1.2",
     "swiper": "^11.1.4"
   },
