--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^5.40.0",
     "axios": "^1.7.2",
     "firebase": "^10.12.2",
+    "jspdf": "^2.5.1",
     "prop-types": "^15.8.1",
     "query-string": "^9.0.0",
     "react": "^18.2.0",
