--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@stripe/stripe-js": "^3.5.0",
     "@tanstack/react-query": "^5.40.0",
     "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
     "firebase": "^10.12.2",
     "jspdf": "^2.5.1",
     "prop-types": "^15.8.1",
