--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^3.6.0",
     "firebase": "^10.12.2",
     "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "prop-types": "^15.8.1",
     "query-string": "^9.0.0",
     "react": "^18.2.0",
